added some info about dataset

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{xcolor}
+\usepackage{subfiles}
 \usepackage{listings}
 \usepackage{tikz}
 \usepackage{xspace}
