add: added reentrancy chapter

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -14,3 +14,11 @@
   author={Martina Rossini},
   year={2022}
 }
+
+@misc{reentrancy-historical,
+  author       = {pcaversaccio},
+  howpublished = {https://github.com/pcaversaccio/reentrancy-attacks},
+  title        = { A Historical Collection of Reentrancy Attacks
+  },
+  year         = {2023}
+}
