added some vulnerabilities info

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -22,3 +22,14 @@
   },
   year         = {2023}
 }
+
+@INPROCEEDINGS{sc-vulnerabilities,
+  author={Khan, Zulfiqar Ali and Siami Namin, Akbar},
+  booktitle={2020 IEEE International Conference on Big Data (Big Data)}, 
+  title={Ethereum Smart Contracts: Vulnerabilities and their Classifications}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-10},
+  keywords={Conferences;Smart contracts;Blockchain;Big Data;Tools;Software;Safety;Smart Contract;Ethereum;EVM;vulnerabilities;Solidity;tools},
+  doi={10.1109/BigData50022.2020.9439088}}
