add: added related work and bib. Added some new codebert approach to test

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -147,3 +147,83 @@ series = {WETSEB '18}
   pages={8-15},
   keywords={Tools;Smart contracts;Static analysis;Optimization;Security;Detectors;Blockchain;Smart Contract;Solidity;Static Analysis;Vulnerability Detection},
   doi={10.1109/WETSEB.2019.00008}}
+
+  @article{ESCORT,
+  author       = {Oliver Lutz and
+                  Huili Chen and
+                  Hossein Fereidooni and
+                  Christoph Sendner and
+                  Alexandra Dmitrienko and
+                  Ahmad{-}Reza Sadeghi and
+                  Farinaz Koushanfar},
+  title        = {{ESCORT:} Ethereum Smart COntRacTs Vulnerability Detection using Deep
+                  Neural Network and Transfer Learning},
+  journal      = {CoRR},
+  volume       = {abs/2103.12607},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2103.12607},
+  eprinttype    = {arXiv},
+  eprint       = {2103.12607},
+  timestamp    = {Tue, 06 Apr 2021 19:06:07 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2103-12607.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{ContractWard,
+  author={Wang, Wei and Song, Jingjing and Xu, Guangquan and Li, Yidong and Wang, Hao and Su, Chunhua},
+  journal={IEEE Transactions on Network Science and Engineering}, 
+  title={ContractWard: Automated Vulnerability Detection Models for Ethereum Smart Contracts}, 
+  year={2021},
+  volume={8},
+  number={2},
+  pages={1133-1144},
+  keywords={Smart contracts;Blockchain;Tools;Feature extraction;Security;Machine learning algorithms;Blockchain;machine learning;smart contracts;vulnerability detection.},
+  doi={10.1109/TNSE.2020.2968505}}
+
+  
+@Article{Mezina,
+AUTHOR = {Mezina, Anzhelika and Ometov, Aleksandr},
+TITLE = {Detecting Smart Contract Vulnerabilities with Combined Binary and Multiclass Classification},
+JOURNAL = {Cryptography},
+VOLUME = {7},
+YEAR = {2023},
+NUMBER = {3},
+ARTICLE-NUMBER = {34},
+URL = {https://www.mdpi.com/2410-387X/7/3/34},
+ISSN = {2410-387X},
+DOI = {10.3390/cryptography7030034}
+}
+
+@article{Huang,
+  author       = {TonTon Hsien{-}De Huang},
+  title        = {Hunting the Ethereum Smart Contract: Color-inspired Inspection of
+                  Potential Attacks},
+  journal      = {CoRR},
+  volume       = {abs/1807.01868},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1807.01868},
+  eprinttype    = {arXiv},
+  eprint       = {1807.01868},
+  timestamp    = {Mon, 13 Aug 2018 16:47:25 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1807-01868.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@Article{Deng,
+AUTHOR = {Deng, Weichu and Wei, Huanchun and Huang, Teng and Cao, Cong and Peng, Yun and Hu, Xuan},
+TITLE = {Smart Contract Vulnerability Detection Based on Deep Learning and Multimodal Decision Fusion},
+JOURNAL = {Sensors},
+VOLUME = {23},
+YEAR = {2023},
+NUMBER = {16},
+ARTICLE-NUMBER = {7246},
+URL = {https://www.mdpi.com/1424-8220/23/16/7246},
+PubMedID = {37631785},
+ISSN = {1424-8220},
+DOI = {10.3390/s23167246}
+}
+
+
+
+
