add: added dataset eda

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -13,8 +13,12 @@
 \usepackage{float}
 \usepackage{indentfirst}
 \usepackage{url}
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 
-\input{solidity-highlighting.tex}	%Solidoty highlighting
+
+\input{solidity-highlighting.tex}	%Solidity highlighting
 
 \textwidth=450pt\oddsidemargin=0pt
 \newenvironment{dedication}
