--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -7,12 +7,13 @@
   number={},
   pages={74-79},
   keywords={Deep learning;Codes;Conferences;Source coding;Smart contracts;Neural networks;Computer architecture;smart contract;code vulnerability;blockchain;deep learning;convolutional neural networks},
-  doi={10.1109/PerComWorkshops56833.2023.10150302}}
+  doi={10.1109/PerComWorkshops56833.2023.10150302}
+  }
 
-  @misc{rossini2022slitherauditedcontracts,
-  title = {Slither Audited Smart Contracts Dataset},
-  author={Martina Rossini},
-  year={2022}
+@misc{rossini2022slitherauditedcontracts,
+title = {Slither Audited Smart Contracts Dataset},
+author={Martina Rossini},
+year={2022}
 }
 
 @misc{reentrancy-historical,
