--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -225,6 +225,43 @@ ISSN = {1424-8220},
 DOI = {10.3390/s23167246}
 }
 
+@article{BERT,
+  author       = {Jacob Devlin and
+                  Ming{-}Wei Chang and
+                  Kenton Lee and
+                  Kristina Toutanova},
+  title        = {{BERT:} Pre-training of Deep Bidirectional Transformers for Language
+                  Understanding},
+  journal      = {CoRR},
+  volume       = {abs/1810.04805},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1810.04805},
+  eprinttype    = {arXiv},
+  eprint       = {1810.04805},
+  timestamp    = {Tue, 30 Oct 2018 20:39:56 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1810-04805.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+@article{AttentionIsAllYouNeed,
+  author       = {Ashish Vaswani and
+                  Noam Shazeer and
+                  Niki Parmar and
+                  Jakob Uszkoreit and
+                  Llion Jones and
+                  Aidan N. Gomez and
+                  Lukasz Kaiser and
+                  Illia Polosukhin},
+  title        = {Attention Is All You Need},
+  journal      = {CoRR},
+  volume       = {abs/1706.03762},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1706.03762},
+  eprinttype    = {arXiv},
+  eprint       = {1706.03762},
+  timestamp    = {Sat, 23 Jan 2021 01:20:40 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/VaswaniSPUJGKP17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 
 
 
