--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -64,6 +64,13 @@ year={2022}
   title        = { OPyente },
 }
 
+@misc{SiteAnnotationTransformer,
+  howpublished = {https://nlp.seas.harvard.edu/annotated-transformer/},
+  title        = { The Annotated Transformer },
+  Author = {Austin Huang, Suraj Subramanian, Jonathan Sum, Khalid Almubarak, and Stella Biderman},
+
+}
+
 @article{Maian2,
 author       = {Bernhard Mueller},
 title        = {Smashing Ethereum Smart Contracts for Fun and Real Profit},
@@ -263,5 +270,131 @@ DOI = {10.3390/s23167246}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@book{jurafsky2009speech,
+  title={Speech and Language Processing},
+  author={Jurafsky, Daniel and Martin, James H},
+  year={2009},
+  publisher={Pearson Prentice Hall},
+  edition={2nd}
+}
+
+@article{TrendsInNLP,
+  author       = {Tom Young and
+                  Devamanyu Hazarika and
+                  Soujanya Poria and
+                  Erik Cambria},
+  title        = {Recent Trends in Deep Learning Based Natural Language Processing},
+  journal      = {CoRR},
+  volume       = {abs/1708.02709},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1708.02709},
+  eprinttype    = {arXiv},
+  eprint       = {1708.02709},
+  timestamp    = {Mon, 13 Aug 2018 16:46:22 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1708-02709.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{6786458,
+  author={Cambria, Erik and White, Bebo},
+  journal={IEEE Computational Intelligence Magazine}, 
+  title={Jumping NLP Curves: A Review of Natural Language Processing Research [Review Article]}, 
+  year={2014},
+  volume={9},
+  number={2},
+  pages={48-57},
+  keywords={Natural language processing;Semantics;Pragmatics;Syntactics;Knowledge based systems},
+  doi={10.1109/MCI.2014.2307227}}
 
 
+  @inproceedings{SVM,
+  author = {Evgeniou, Theodoros and Pontil, Massimiliano},
+  year = {2001},
+  month = {09},
+  pages = {249-257},
+  title = {Support Vector Machines: Theory and Applications},
+  volume = {2049},
+  isbn = {978-3-540-42490-1},
+  doi = {10.1007/3-540-44673-7_12}
+  }
+
+  @article{LSTM,
+  author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+  title = {Long Short-Term Memory},
+  year = {1997},
+  issue_date = {November 15, 1997},
+  publisher = {MIT Press},
+  address = {Cambridge, MA, USA},
+  volume = {9},
+  number = {8},
+  issn = {0899-7667},
+  url = {https://doi.org/10.1162/neco.1997.9.8.1735},
+  doi = {10.1162/neco.1997.9.8.1735},
+  journal = {Neural Comput.},
+  month = {nov},
+  pages = {1735–1780},
+  numpages = {46}
+  }
+
+  @inproceedings{rush-2018-annotated,
+    title = "The Annotated Transformer",
+    author = "Rush, Alexander",
+    editor = "Park, Eunjeong L.  and
+      Hagiwara, Masato  and
+      Milajevs, Dmitrijs  and
+      Tan, Liling",
+    booktitle = "Proceedings of Workshop for {NLP} Open Source Software ({NLP}-{OSS})",
+    month = jul,
+    year = "2018",
+    address = "Melbourne, Australia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/W18-2509",
+    doi = "10.18653/v1/W18-2509",
+    pages = "52--60",
+    abstract = "A major goal of open-source NLP is to quickly and accurately reproduce the results of new work, in a manner that the community can easily use and modify. While most papers publish enough detail for replication, it still may be difficult to achieve good results in practice. This paper presents a worked exercise of paper reproduction with the goal of implementing the results of the recent Transformer model. The replication exercise aims at simple code structure that follows closely with the original work, while achieving an efficient usable system.",
+}
+
+@article{WordPiece,
+  author       = {Yonghui Wu and
+                  Mike Schuster and
+                  Zhifeng Chen and
+                  Quoc V. Le and
+                  Mohammad Norouzi and
+                  Wolfgang Macherey and
+                  Maxim Krikun and
+                  Yuan Cao and
+                  Qin Gao and
+                  Klaus Macherey and
+                  Jeff Klingner and
+                  Apurva Shah and
+                  Melvin Johnson and
+                  Xiaobing Liu and
+                  Lukasz Kaiser and
+                  Stephan Gouws and
+                  Yoshikiyo Kato and
+                  Taku Kudo and
+                  Hideto Kazawa and
+                  Keith Stevens and
+                  George Kurian and
+                  Nishant Patil and
+                  Wei Wang and
+                  Cliff Young and
+                  Jason Smith and
+                  Jason Riesa and
+                  Alex Rudnick and
+                  Oriol Vinyals and
+                  Greg Corrado and
+                  Macduff Hughes and
+                  Jeffrey Dean},
+  title        = {Google's Neural Machine Translation System: Bridging the Gap between
+                  Human and Machine Translation},
+  journal      = {CoRR},
+  volume       = {abs/1609.08144},
+  year         = {2016},
+  url          = {http://arxiv.org/abs/1609.08144},
+  eprinttype    = {arXiv},
+  eprint       = {1609.08144},
+  timestamp    = {Thu, 14 Jan 2021 12:12:19 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/WuSCLNMKCGMKSJL16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
