add: methodology for bert and distillbert

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -67,7 +67,7 @@ year={2022}
 @misc{SiteAnnotationTransformer,
   howpublished = {https://nlp.seas.harvard.edu/annotated-transformer/},
   title        = { The Annotated Transformer },
-  Author = {Austin Huang, Suraj Subramanian, Jonathan Sum, Khalid Almubarak, and Stella Biderman},
+  Author = {Austin Huang and Suraj Subramanian and  Jonathan Sum and Khalid Almubarak and Stella Biderman},
 
 }
 
@@ -396,5 +396,88 @@ DOI = {10.3390/s23167246}
   eprint       = {1609.08144},
   timestamp    = {Thu, 14 Jan 2021 12:12:19 +0100},
   biburl       = {https://dblp.org/rec/journals/corr/WuSCLNMKCGMKSJL16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DistillBERT,
+  author       = {Victor Sanh and
+                  Lysandre Debut and
+                  Julien Chaumond and
+                  Thomas Wolf},
+  title        = {DistilBERT, a distilled version of {BERT:} smaller, faster, cheaper
+                  and lighter},
+  journal      = {CoRR},
+  volume       = {abs/1910.01108},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1910.01108},
+  eprinttype    = {arXiv},
+  eprint       = {1910.01108},
+  timestamp    = {Tue, 02 Jun 2020 12:48:59 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1910-01108.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{RoBERTa,
+  author       = {Yinhan Liu and
+                  Myle Ott and
+                  Naman Goyal and
+                  Jingfei Du and
+                  Mandar Joshi and
+                  Danqi Chen and
+                  Omer Levy and
+                  Mike Lewis and
+                  Luke Zettlemoyer and
+                  Veselin Stoyanov},
+  title        = {RoBERTa: {A} Robustly Optimized {BERT} Pretraining Approach},
+  journal      = {CoRR},
+  volume       = {abs/1907.11692},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1907.11692},
+  eprinttype    = {arXiv},
+  eprint       = {1907.11692},
+  timestamp    = {Thu, 14 Dec 2023 18:03:41 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1907-11692.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{CodeBERT,
+  author       = {Zhangyin Feng and
+                  Daya Guo and
+                  Duyu Tang and
+                  Nan Duan and
+                  Xiaocheng Feng and
+                  Ming Gong and
+                  Linjun Shou and
+                  Bing Qin and
+                  Ting Liu and
+                  Daxin Jiang and
+                  Ming Zhou},
+  title        = {CodeBERT: {A} Pre-Trained Model for Programming and Natural Languages},
+  journal      = {CoRR},
+  volume       = {abs/2002.08155},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2002.08155},
+  eprinttype    = {arXiv},
+  eprint       = {2002.08155},
+  timestamp    = {Thu, 18 Jun 2020 10:52:55 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2002-08155.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{CodeBERTDataset,
+  author       = {Hamel Husain and
+                  Ho{-}Hsiang Wu and
+                  Tiferet Gazit and
+                  Miltiadis Allamanis and
+                  Marc Brockschmidt},
+  title        = {CodeSearchNet Challenge: Evaluating the State of Semantic Code Search},
+  journal      = {CoRR},
+  volume       = {abs/1909.09436},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1909.09436},
+  eprinttype    = {arXiv},
+  eprint       = {1909.09436},
+  timestamp    = {Tue, 24 Sep 2019 11:33:51 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1909-09436.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
