--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -17,6 +17,7 @@
 \usepackage{caption}
 \usepackage{hyperref}
 \usepackage{subcaption}
+\usepackage{pythonhighlight}
 
 
 \input{solidity-highlighting.tex}	%Solidity highlighting
