fix: added evaluation for cb bytecode

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -515,3 +515,17 @@ DOI = {10.3390/s23167246}
   biburl       = {https://dblp.org/rec/journals/corr/abs-1912-01703.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{DeepMind,
+   author = "Wikipedia",
+   title = "{Google DeepMind} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2024",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Google\%20DeepMind&oldid=1228075682}},
+ }
+
+ @misc{Gemini,
+   author = "Wikipedia",
+   title = "{Gemini (language model)} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2024",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Gemini\%20(language\%20model)&oldid=1227938870}},
+ }
