--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -529,3 +529,14 @@ DOI = {10.3390/s23167246}
    year = "2024",
    howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Gemini\%20(language\%20model)&oldid=1227938870}},
  }
+
+ @article{logisticReg,
+author = {Peng, Joanne and Lee, Kuk and Ingersoll, Gary},
+year = {2002},
+month = {09},
+pages = {3-14},
+title = {An Introduction to Logistic Regression Analysis and Reporting},
+volume = {96},
+journal = {Journal of Educational Research - J EDUC RES},
+doi = {10.1080/00220670209598786}
+}
