--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -540,3 +540,20 @@ volume = {96},
 journal = {Journal of Educational Research - J EDUC RES},
 doi = {10.1080/00220670209598786}
 }
+
+@article{DBLP:journals/corr/abs-2106-13422,
+  author       = {Rachit Agarwal and
+                  Tanmay Thapliyal and
+                  Sandeep Kumar Shukla},
+  title        = {Vulnerability and Transaction behavior based detection of Malicious
+                  Smart Contracts},
+  journal      = {CoRR},
+  volume       = {abs/2106.13422},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2106.13422},
+  eprinttype    = {arXiv},
+  eprint       = {2106.13422},
+  timestamp    = {Mon, 31 Jan 2022 14:09:26 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2106-13422.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
