--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -83,10 +83,11 @@
     \end{titlepage}
 
     \begin{dedication}
-        Alle nonne
+       ...
     \end{dedication}
     \tableofcontents
     \listoffigures
+    \listoftables
     
 \subfile{Chapters/Introduction/Introduction.tex}
 \subfile{Chapters/RelatedWork/RelatedWork.tex}
